--- a/demo/index.html
+++ b/demo/index.html
@@ -21,7 +21,7 @@
       <md-icon md-svg-icon="img/icons/menu.svg"></md-icon>
     </md-button>
     <h1>
-      <span>Video Cliper Example / jgonzalez315</span>
+      <span>Video Cliper Example / Jean Gonzalez</span>
     </h1>
     <span flex></span>
 
